force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena os múltiplos endereços da conta.</description>
    <label>Endereço</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Endereço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endereços</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>