force-app/main/default/objects/Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Relacionamento com o objeto Conta.</description>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Endereços</relationshipLabel>
    <relationshipName>AccountAddress</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>