force-app/main/default/objects/Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Campo com o Endereço completo de Cobrança.</description>
    <formula>ReceiverName__c &amp; BR() &amp; 
Street__c &amp; &quot;, &quot; &amp; Number__c &amp; BR() &amp; 
Neighborhood__c &amp; &quot; - &quot; &amp; &quot;CEP: &quot; &amp; PostalCode__c &amp; BR() &amp;
City__c  &amp; &quot;/&quot; &amp; TEXT(State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço Completo</label>
    <type>Text</type>
</CustomField>