force-app/main/default/objects/Address__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <label>Tipo de endereço</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
                <default>true</default>
                <label>Casa</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <label>Comercial</label>
            </value>
            <value>
                <fullName>Apartment</fullName>
                <label>Apartamento</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Outro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>