force-app/main/default/objects/Address__c/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <description>Complemento do Endereço.</description>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>