force-app/main/default/objects/Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>País do Endereço de Cobrança.</description>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>