force-app/main/default/objects/Address__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <description>Bairro do Endereço</description>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>