force-app/main/default/objects/Address__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Número do endereço.</description>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>