force-app/main/default/objects/Address__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Campo de CEP do Endereço (Postal Code)</description>
    <label>CEP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>