force-app/main/default/objects/Address__c/fields/ReceiverName__c.field-meta.xml
<CustomField>
    <fullName>ReceiverName__c</fullName>
    <description>Nome do destinatário.</description>
    <label>Nome do destinatário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>