force-app/main/default/objects/Address__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Referência do endereço.</description>
    <label>Informações de referência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>