force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Campo Rua do Endereço de Cobrança.</description>
    <label>Rua</label>
    <type>TextArea</type>
</CustomField>